# OpenGLRenderer

./: .gitignore  CMakeLists.txt  README.md  todo.txt
Shaders/: shader.frag  shader.vert
src/: AmbientLight.cpp  AmbientLight.hpp  App.cpp  App.hpp  Camera.cpp  Camera.hpp  Constants.hpp  Debug.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  Macros.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PointLight.cpp  PointLight.hpp  Shader.cpp  Shader.hpp  SpotLight.cpp  SpotLight.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  main.cpp  stdafx.cpp  stdafx.hpp
src/Event/: ApplicationEvent.hpp  Event.hpp  KeyboardEvent.hpp  MauseEvent.hpp
